# clawmetry

./: .clawmetry-fleet.db  .clawmetry-metrics.json  .dockerignore  .gitignore  .release-notes-2026-05-17.tmp  AGENTS.md  ARCHITECTURE.md  AUDIT.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DUCKDB_COVERAGE_AUDIT_2026-05-13.md  Dockerfile  FLYWHEEL.md  MANIFEST.in  Makefile  OBSERVABILITY.md  PRD-cloud-pro-agent-reliability.md  PRD-sync-status.md  PRD-tracing.md  PRD.md  PR_DESCRIPTION.md  README.md  SKILL_TEMPLATES.md  UPCOMING.md  UX_AUDIT.md  agents-ways-of-working.md  browserstack.yml  clawmetry-auto.pth  dashboard.py  dashboard_claudecode.py  history.py  install-clawmetry.ps1  install-clawmetry.sh  install.ps1  install.sh  package.json  requirements.txt  setup.py  (+2 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
blog/: openinfer-clawmetry-launch.md
clawhub-plugin/: README.md  index.ts  install.sh  openclaw.plugin.json  package.json  tsconfig.json  uninstall.sh
clawmetry-landing/: .dockerignore  Dockerfile  app.py  cloud.html  connect.html  docs.html  globe.html  gtm-plan.html  how-it-works-v2.html  how-it-works.html  index.html  install.cmd  install.ps1  install.sh  nemoclaw.html  new.html  old.html  pitch-deck.html  pitch-scorecard.html  pitch-v1-openclaw.html  pitch-v2-platform.html  pitch-v3-product.html  pitch-v4-growth.html  pricing.html  privacy.html  requirements.txt  roadmap.html  robots.txt  showcase.html  site.webmanifest  sitemap.xml  terms.html  traction.html  v2.html
helpers/: logs.py  (+6 more)
integrations/nat/: README.md  pyproject.toml
integrations/nat/clawmetry_nat/: __init__.py  exporter.py  mapper.py
integrations/nat/tests/: test_exporter.py  test_mapper.py
(+2178 files in other folders)
